# zcli

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  deploy.yaml  release.yml
crates/frost-spend/: Cargo.toml
crates/frost-spend/src/: attestation.rs  hierarchical.rs  keys.rs  lib.rs  memo_codec.rs  message.rs  nested.rs  orchestrate.rs  sign.rs  transport.rs
crates/ligerito/: Cargo.toml  build.rs
crates/ligerito-binary-fields/: Cargo.toml
crates/ligerito-binary-fields/examples/: simd_compare.rs
crates/ligerito-binary-fields/src/: elem.rs  fast_inverse.rs  lib.rs  poly.rs  simd.rs
crates/ligerito-merkle/: Cargo.toml
crates/ligerito-merkle/src/: batch.rs  lib.rs
crates/ligerito-reed-solomon/: Cargo.toml
crates/ligerito-reed-solomon/examples/: perf_compare.rs
crates/ligerito-reed-solomon/src/: encode.rs  fft.rs  fft_gf32.rs  lib.rs
crates/ligerito/benches/: ligerito_bench.rs
crates/ligerito/examples/: compression_prototype.rs  detailed_proof_breakdown.rs  quick_bench.rs
crates/ligerito/src/: autosizer.rs  backend.rs  configs.rs  cpu_affinity.rs  data_structures.rs  eval_proof.rs  lib.rs  ligero.rs  prover.rs  sumcheck_polys.rs  sumcheck_verifier.rs  transcript.rs  utils.rs  verifier.rs  wasm.rs  wasm_raw.rs
crates/ligerito/src/gpu/: device.rs  fft.rs  mod.rs  sumcheck.rs
crates/ligerito/tests/: game_of_life_continuous.rs  game_of_life_interactive.rs  game_of_life_tui.rs  memory_merkle_integration.rs  pcvm_phase2.rs  polkavm_arithmetization_integration.rs  polkavm_end_to_end.rs  polkavm_integration_test.rs  polkavm_soundness_tests.rs  state_continuity_test.rs  test_tensor_debug.rs  test_tensorized.rs
crates/maybe-rayon/: Cargo.toml
crates/maybe-rayon/src/: lib.rs
crates/ring-vrf-wasm/: Cargo.toml  build-wasm.sh
crates/ring-vrf-wasm/src/: lib.rs
crates/zcash-wasm/: Cargo.toml
crates/zcash-wasm/src/: frost.rs  lib.rs  witness.rs
crates/zcash-wasm/tests/: extract_signed_tx.rs  pczt_redactor_property.rs  pczt_redactor_smoke.rs  zashi_interop_snapshot.rs
crates/zoda-vss/: Cargo.toml
crates/zoda-vss/src/: lib.rs  transport.rs
crates/zync-core/: Cargo.toml  README.md
crates/zync-core/proto/: zidecar.proto
crates/zync-core/src/: actions.rs  auth.rs  endpoints.rs  lib.rs  nomt.rs  prover.rs  scanner.rs  sync.rs  trace.rs  verifier.rs  wasm_api.rs
crates/zync-core/src/client/: lightwalletd.rs  mod.rs  zidecar.rs
deploy/: Caddyfile.zidecar  README  zclid.service  zidecar.service
examples/: exchange.rs
examples/webshop/: .env.example  Caddyfile  seed-requests.sh
proto/: zidecar.proto
src/: address.rs  cam.rs  cli.rs  client.rs  key.rs  lib.rs  main.rs  quic.rs  tx.rs  wallet.rs  witness.rs
src/ops/: mod.rs  send.rs  shield.rs  sync.rs
www/: blocked.txt  board.html  docs.html  index.html  style.css  update.sh  zigner.html
