[workspace]
resolver = "2"
members = [
    "bin/zcli",
    "bin/zclid",
    "bin/zidecar",
    "crates/zync-core",
    "crates/ligerito",
    "crates/ligerito-binary-fields",
    "crates/ligerito-merkle",
    "crates/ligerito-reed-solomon",
    "crates/zcash-wasm",
    "crates/frost-spend",
    "bin/relay",
    "bin/poker",
]

[workspace.package]
authors = ["rotko networks"]
edition = "2021"
license = "MIT"
repository = "https://github.com/rotkonetworks/zcli"

[workspace.dependencies]
ligerito = { path = "crates/ligerito" }
ligerito-binary-fields = { path = "crates/ligerito-binary-fields" }
ligerito-merkle = { path = "crates/ligerito-merkle" }
ligerito-reed-solomon = { path = "crates/ligerito-reed-solomon" }
zync-core = { path = "crates/zync-core" }

# shared deps inherited by ligerito crates
bytemuck = { version = "1", default-features = false, features = ["extern_crate_alloc"] }
criterion = "0.5"
hex = "0.4"
merlin = "3.0"
proptest = "1.4"
rand = "0.8"
rand_chacha = "0.3"
rayon = "1.8"
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
sha2 = { version = "0.10", default-features = false }
thiserror = "1.0"
wide = { version = "0.7", default-features = false }

[patch.crates-io]
maybe-rayon = { path = "crates/maybe-rayon" }

[patch."https://github.com/rotkonetworks/zeratul.git"]
osst = { path = "../zeratul/crates/osst" }
