[package]
name = "frost-spend"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "FROST threshold spend authorization for Zcash Orchard"

[features]
default = []
# enable when orchard upstream merges from_sk_ak
# until then we use conradoplg's fork
wasm = ["getrandom/js"]

[dependencies]
# ZF FROST (RedPallas, rerandomized)
reddsa = { git = "https://github.com/ZcashFoundation/reddsa.git", rev = "475a552", features = ["frost", "serde"] }
ed25519-consensus = "2"
rand_core = "0.6"

# conradoplg's fork — needed for from_sk_ak (FROST FVK derivation).
# default-features = false drops `multicore`; we only use orchard::keys::*.
orchard = { git = "https://github.com/conradoplg/orchard.git", rev = "f0c88b78a1d70d55ce6bb480566d132e57d5607b", default-features = false, features = ["unstable-frost"] }

# Pallas curve
pasta_curves = "0.5"

# OSST: nested FROST + reshare (public extract from zeratul)
osst = { git = "https://github.com/rotkonetworks/frostito", rev = "ae5b415e", default-features = false, features = ["pallas"] }

# hashing
sha2 = "0.10"
blake2b_simd = "1.0"

# serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = { version = "0.4", features = ["serde"] }

# optional WASM support
getrandom = { version = "0.2", optional = true }
