[package]
name = "ring-vrf-wasm"
version = "0.1.0"
edition = "2021"
description = "Bandersnatch Ring VRF prover for zafu pro membership proofs"

[lib]
crate-type = ["cdylib"]

[dependencies]
ark-vrf = { version = "0.2", features = ["bandersnatch", "ring"] }
ark-serialize = { version = "0.5", features = ["derive"] }
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = "0.1"
hex = "0.4"
hkdf = "0.12"
sha2 = "0.10"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
opt-level = "z"
lto = true
strip = true
