[package]
name = "zafu-wasm"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "WASM bindings for Zafu Zcash wallet - parallel trial decryption with SIMD"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["parallel"]
# Gate orchard/multicore here so wasm-single (no parallel) skips halo2's
# multicore code paths — keeps the single artifact ~3% smaller.
parallel = ["rayon", "wasm-bindgen-rayon", "orchard/multicore"]

[dependencies]
# crypto primitives (WASM-compatible)
pasta_curves = "0.5"
subtle = "2.5"
ff = "0.13"
group = "0.13"

# Orchard protocol - real key derivation and note encryption
# Use latest versions to avoid halo2_proofs/indexmap conflict
# All librustzcash crates pinned to git rev 5333c01b so the version coords
# line up with `pczt` (which we pull from the same rev). Keeping any of these
# on crates.io would cause a duplicate-crate-version error in the dep graph.
orchard = { version = "0.12", default-features = false, features = ["circuit"] }
zcash_keys = { git = "https://github.com/zcash/librustzcash", rev = "5333c01b", default-features = false, features = ["orchard", "transparent-inputs"] }
zcash_address = { git = "https://github.com/zcash/librustzcash", rev = "5333c01b", default-features = false }
zcash_protocol = { git = "https://github.com/zcash/librustzcash", rev = "5333c01b", default-features = false }
rand_core = "0.6"
zip32 = { version = "0.2", default-features = false }

# merkle witness building
incrementalmerkletree = { version = "0.8", features = ["legacy-api"] }
hex = "0.4"

# force indexmap's `std` feature across the dep graph so halo2_proofs
# (which pulls indexmap with default-features = false) can use
# IndexMap::new() — otherwise `has_std` cfg isn't set under `-Z build-std`
# and the build fails with "struct takes 3 generic arguments".
indexmap = { version = "1", features = ["std"] }

# note encryption (no heavy circuit deps)
zcash_note_encryption = "0.4"

# transaction primitives
# zcash_primitives 0.26 + sapling-crypto 0.6 + orchard 0.12 line up with the
# librustzcash workspace at git rev 5333c01b — the same version coords zigner
# and zashi/keystone-sdk consume. Required for `pczt` interop.
zcash_primitives = { git = "https://github.com/zcash/librustzcash", rev = "5333c01b", default-features = false, features = ["non-standard-fees", "transparent-inputs"] }
zcash_transparent = { git = "https://github.com/zcash/librustzcash", rev = "5333c01b", package = "zcash_transparent", default-features = false, features = ["transparent-inputs"] }

# Partially-Created Zcash Transaction (PCZT) construction.
# Pinned to the same librustzcash workspace rev that zigner consumes so
# orchard/sapling/zcash_primitives versions match byte-for-byte.
pczt = { git = "https://github.com/zcash/librustzcash", rev = "5333c01b", default-features = false, features = ["orchard", "transparent", "sapling", "zcp-builder", "prover", "io-finalizer", "tx-extractor", "signer", "spend-finalizer"] }
# zcash_primitives renames sapling-crypto to `sapling` internally; mirror the
# alias so BuildConfig's `Option<sapling::Anchor>` field type-checks.
# `circuit` feature pulls bellman+groth16 proving — bloats the wasm but is
# required because pczt's prover/io-finalizer code paths reference
# sapling::pczt::ProverError / Prover even when the tx has no sapling actions.
sapling = { package = "sapling-crypto", version = "0.6", default-features = false, features = ["circuit"] }

# key derivation
bip39 = { version = "2.0", features = ["rand"] }
blake2 = "0.10"
chacha20poly1305 = "0.10"

# secp256k1 / transparent address support
k256 = { version = "0.13", features = ["ecdsa-core", "ecdsa", "sha256"] }
hmac = "0.12"
sha2 = "0.10"
ripemd = "0.1"
blake2b_simd = "1.0"

# wasm bindings
wasm-bindgen = "0.2.113"
js-sys = "0.3"
console_error_panic_hook = "0.1"
getrandom = { version = "0.2", features = ["js"] }

# rng for proving
rand = "0.8"

# FROST threshold multisig
frost-spend = { path = "../frost-spend", features = ["wasm"] }

# serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"

# UR encoding for QR transport
ur = "0.4"

# Verified erasure-coded QR transport
zoda-vss = { path = "../zoda-vss", default-features = false }

# parallel processing (optional, enabled by default)
rayon = { version = ">=1.10, <1.11", optional = true }
wasm-bindgen-rayon = { version = "1.2", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"
criterion = "0.5"
rand = "0.8"
# Used by integration tests (tests/) to build small synthetic PCZTs for
# redactor/round-trip property assertions. We deliberately re-use the same
# zcash_transparent the lib pulls (no alias) — Cargo refuses two names for
# the same crate, and pczt's signer/transparent code expects this exact rev.
secp256k1 = { version = "0.29", default-features = false, features = ["alloc"] }

[[bench]]
name = "scanning"
harness = false
