[package]
name = "zync-core"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "Zcash light client primitives — verification, scanning, proof types"
repository = "https://github.com/rotkonetworks/zcash-lc"
keywords = ["zcash", "ligerito", "light-client", "zk-proofs"]
categories = ["cryptography"]

[features]
default = ["client", "parallel"]
client = ["tonic", "prost", "tokio", "tokio-stream", "tracing"]
parallel = ["rayon"]

wasm = [
    "getrandom/js",
    "wasm-bindgen",
    "console_error_panic_hook",
]

wasm-parallel = [
    "wasm",
    "parallel",
    "wasm-bindgen-rayon",
    "js-sys",
]

[dependencies]
# ligerito polynomial commitment scheme
ligerito = { path = "../ligerito", features = ["transcript-blake2b"] }
ligerito-binary-fields = { path = "../ligerito-binary-fields" }

blake2 = "0.10"
sha2 = "0.10"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
anyhow = "1.0"
hex = "0.4"
bincode = "1.3"

# nomt merkle proof verification
nomt-core = { version = "1.0", features = ["blake3-hasher", "serde"] }
bitvec = "1"

# zcash
orchard = "0.7"
zcash_note_encryption = "0.4"
pasta_curves = "0.5"
subtle = "2.5"

# gRPC client (optional)
tonic = { version = "0.11", optional = true }
prost = { version = "0.12", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
tokio-stream = { version = "0.1", optional = true }
tracing = { version = "0.1", optional = true }

# parallel scanning
rayon = { version = "1.10", optional = true }

# WASM
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-rayon = { version = "1.2", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
getrandom = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }

[build-dependencies]
tonic-build = "0.11"

[dev-dependencies]
rand = "0.8"
